--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,7 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 /* 
 
     You can write your own styles here...
@@ -12,15 +14,54 @@
 
 */
 body {
-    color:white;
+    font-family: 'Press Start 2P', cursive;
+    font-size: small;
+    color:lightgreen;
     background-color: slategrey;
+    text-shadow: 1px 1px 0px #ff0000;
+    
+}
+h1{
+    margin-top:2%;
+    padding:2%;
 }
 ol {
     list-style-type: none;
+    box-shadow: .5rem .5rem 1rem .5rem rgba(0, 0, 0, 0.6);
+    padding-top:5px;
+    padding-bottom:5px;
+    margin-top:2%;
     
 }
+li {
+    padding:1%;
+}
+.controls{
+    padding:2%;
+}
+.listBox {
+    
+    border:3px groove rgb(196, 195, 195);
+    -webkit-box-shadow: 0px 0px 15px 8px #000000; 
+box-shadow: 0px 0px 15px 8px #000000;
+    background: rgb(145,146,147);
+background: linear-gradient(90deg, rgba(145,146,147,1) 0%, rgba(64,64,64,1) 10%, rgba(64,64,64,1) 90%, rgba(145,146,147,1) 100%);
+}
+.bigListBox{
+    -webkit-box-shadow: 0px 0px 15px 8px #000000; 
+box-shadow: 0px 0px 15px 8px #000000;
+    border-radius:10px;
+}
 li:nth-child(even) {
-   background-color: gray;
+   background: rgb(145,146,147);
+background: linear-gradient(90deg, rgba(145,146,147,1) 0%, rgba(64,64,64,1) 10%, rgba(64,64,64,1) 90%, rgba(145,146,147,1) 100%);
+
+   
+}
+li:nth-child(odd) {
+    background: rgb(208,208,208);
+background: linear-gradient(90deg, rgba(208,208,208,1) 0%, rgba(129,128,128,1) 10%, rgba(129,128,128,1) 90%, rgba(208,208,208,1) 100%);
+   background-color: rgb(148, 147, 147);
 }
 a:link {
   color: white;
@@ -33,9 +74,9 @@ a:visited {
   text-decoration: none;
 }
 li:hover{   
-    color:green;
+    color:silver;
 
 }
 a:target{
-    color: purple;
+    color: silver;
 }
