--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -36,7 +36,7 @@ h1{
 }
 ol {
     list-style-type: none;
-    box-shadow: .5rem .5rem 1rem .5rem rgba(0, 0, 0, 0.6);
+    box-shadow: .5rem .5rem 1rem .5rem rgba(0, 0, 0, 0.5);
     padding-top:5px;
     padding-bottom:5px;
     margin-top:2%;
@@ -51,15 +51,25 @@ li {
 .listBox {
     
     border:3px groove rgb(196, 195, 195);
-    -webkit-box-shadow: 0px 15px 15px 20px #000000; 
-    box-shadow: 0px 15px 15px 20px #000000;
+    -webkit-box-shadow: 0px 15px 15px 20pxrgba(0, 0, 0, 0.2); 
+    box-shadow: 0px 15px 15px 20px rgba(0, 0, 0, 0.2);
     background: rgb(145,146,147);
     background: linear-gradient(90deg, rgba(145,146,147,1) 0%, rgba(64,64,64,1) 10%, rgba(64,64,64,1) 90%, rgba(145,146,147,1) 100%);
 }
+
+nav{
+    max-height: auto;
+}
+nav ol{
+    height:200px; width:18%;
+    overflow:hidden; 
+    overflow-y:scroll;
+}
+
 .bigListBox{
-    
-    -webkit-box-shadow: 0px 15px 15px 20px #000000; 
-    box-shadow: 0px 15px 15px 20px #000000;
+    border: 10px solid rgba(145,146,147,1);
+    -webkit-box-shadow: 0px 15px 15px 20pxrgba(0, 0, 0, 0.2); 
+    box-shadow: 0px 15px 15px 20px rgba(0, 0, 0, 0.2);
     border-radius:50px;
     background: rgb(131,131,131);
     background: linear-gradient(90deg, rgba(131,131,131,1) 0%, rgba(80,80,80,1) 4%, rgba(80,80,80,1) 96%, rgba(131,131,131,1) 100%);}
@@ -92,3 +102,84 @@ a:target{
     color: silver;
 }
 
+input[type=range] {
+  width: auto;
+  margin: 14.35px 0;
+  background-color: transparent;
+  -webkit-appearance: none;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  background: #ef5fbd;
+  border: 0.3px solid #000000;
+  border-radius: 16.2px;
+  width: 100%;
+  height: 7.3px;
+  cursor: pointer;
+}
+input[type=range]::-webkit-slider-thumb {
+  margin-top: -8px;
+  width: 20px;
+  height: 20px;
+  background: #90ee90;
+  border: 2.9px solid #1c1bff;
+  border-radius: 50%;
+  cursor: pointer;
+  -webkit-appearance: none;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #faceeb;
+}
+input[type=range]::-moz-range-track {
+  background: #ef5fbd;
+  border: 0.3px solid #000000;
+  border-radius: 16.2px;
+  width: 100%;
+  height: 7.3px;
+  cursor: pointer;
+}
+input[type=range]::-moz-range-thumb {
+  width: 16px;
+  height: 36px;
+  background: #90ee90;
+  border: 2.9px solid #1c1bff;
+  border-radius: 3px;
+  cursor: pointer;
+}
+input[type=range]::-ms-track {
+  background: transparent;
+  border-color: transparent;
+  border-width: 14.35px 0;
+  color: transparent;
+  width: 100%;
+  height: 7.3px;
+  cursor: pointer;
+}
+input[type=range]::-ms-fill-lower {
+  background: #c01384;
+  border: 0.3px solid #000000;
+  border-radius: 32.4px;
+}
+input[type=range]::-ms-fill-upper {
+  background: #ef5fbd;
+  border: 0.3px solid #000000;
+  border-radius: 32.4px;
+}
+input[type=range]::-ms-thumb {
+  width: 16px;
+  height: 36px;
+  background: #90ee90;
+  border: 2.9px solid #1c1bff;
+  border-radius: 3px;
+  cursor: pointer;
+  margin-top: 0px;
+  /*Needed to keep the Edge thumb centred*/
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #ef5fbd;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #faceeb;
+}
